# Pulse

./: .dockerignore  .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  gitleaks.toml  init_db.py  pyproject.toml  requirements.txt  test_api.py
app/: cli.py
app/api/: endpoints.py  main.py
app/core/: database.py
app/models/: __init__.py  project.py  remediation.py  scan.py  vulnerability.py
app/scanners/: base.py  gitleaks.py
app/schemas/: scan.py
app/services/: ai_service.py
app/tasks/: orchestration.py  worker.py
docker/: Dockerfile
