[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pulse-cli"
version = "0.1.0"
description = "Pulse AI Security Pipeline CLI"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.1",
    "httpx>=0.27.0"
]

[tool.setuptools.packages.find]
include = ["app*"]

[project.scripts]
pulse = "app.cli:app"
